# programming-bitcoin

./: .gitignore  Cargo.toml  README.md
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
src/: lib.rs  main.rs
src/ch01/: ex01.rs  mod.rs
src/ch01_finite_fields/: field_element.rs
src/ch02/: ex02.rs  mod.rs
src/ch02_elliptic_curves/: point.rs
src/ch03/: ex03.rs  mod.rs  s256_field.rs  s256_point.rs  secret.rs  signature.rs
src/ch03_ecc/: felts_point.rs  mod.rs  private_key.rs  s256_field.rs  s256_point.rs  signature.rs
src/ch04/: ch04_signature.rs  mod.rs  s256_point.rs  secret.rs
src/ch04_serialization/: mod.rs  ser_private_key.rs  ser_s256_field.rs  ser_s256_point.rs  ser_signature.rs
src/ch05_transactions/: mod.rs  transaction.rs  tx_fetcher.rs  tx_input.rs  tx_output.rs
src/ch06_script/: mod.rs  op_codes.rs  opcodes.rs  script.rs
tests/: README.md  ch01_finite_fields_tests.rs  ch02_elliptic_curves_tests.rs  ch03_bitcoin_crypto_tests.rs  ch04_serialization_tests.rs  ch05_transactions_tests.rs  ch06_script_tests.rs
