[package]
name = "programming_bitcoin"
version = "0.1.0"
edition = "2024"

[dependencies]
hex = "0.4.3"
num-bigint = "0.4.6"
rand = "0.8.5"
hmac = "0.12.1"
sha2 = "0.10.9"
secp256k1 = { version = "0.31.1", features = ["global-context"]}
bs58 = "0.5.1"
ripemd = "0.1.3"
dotenvy = "0.15.7"
serde_json = "1.0.149"
serde = { version = "1.0", features = ["derive"] }
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
